docs/upbound-provider-gcp/1.8/datafusion/v1beta1/instance.md
---
permalink: /upbound-provider-gcp/1.8/datafusion/v1beta1/instance/
---

# datafusion.v1beta1.instance

"Instance is the Schema for the Instances API. Represents a Data Fusion instance."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAccelerators(accelerators)`](#fn-specforproviderwithaccelerators)
    * [`fn withAcceleratorsMixin(accelerators)`](#fn-specforproviderwithacceleratorsmixin)
    * [`fn withCryptoKeyConfig(cryptoKeyConfig)`](#fn-specforproviderwithcryptokeyconfig)
    * [`fn withCryptoKeyConfigMixin(cryptoKeyConfig)`](#fn-specforproviderwithcryptokeyconfigmixin)
    * [`fn withDataprocServiceAccount(dataprocServiceAccount)`](#fn-specforproviderwithdataprocserviceaccount)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDisplayName(displayName)`](#fn-specforproviderwithdisplayname)
    * [`fn withEnableRbac(enableRbac)`](#fn-specforproviderwithenablerbac)
    * [`fn withEnableStackdriverLogging(enableStackdriverLogging)`](#fn-specforproviderwithenablestackdriverlogging)
    * [`fn withEnableStackdriverMonitoring(enableStackdriverMonitoring)`](#fn-specforproviderwithenablestackdrivermonitoring)
    * [`fn withEventPublishConfig(eventPublishConfig)`](#fn-specforproviderwitheventpublishconfig)
    * [`fn withEventPublishConfigMixin(eventPublishConfig)`](#fn-specforproviderwitheventpublishconfigmixin)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withNetworkConfig(networkConfig)`](#fn-specforproviderwithnetworkconfig)
    * [`fn withNetworkConfigMixin(networkConfig)`](#fn-specforproviderwithnetworkconfigmixin)
    * [`fn withOptions(options)`](#fn-specforproviderwithoptions)
    * [`fn withOptionsMixin(options)`](#fn-specforproviderwithoptionsmixin)
    * [`fn withPrivateInstance(privateInstance)`](#fn-specforproviderwithprivateinstance)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withType(type)`](#fn-specforproviderwithtype)
    * [`fn withVersion(version)`](#fn-specforproviderwithversion)
    * [`fn withZone(zone)`](#fn-specforproviderwithzone)
    * [`obj spec.forProvider.accelerators`](#obj-specforprovideraccelerators)
      * [`fn withAcceleratorType(acceleratorType)`](#fn-specforprovideracceleratorswithacceleratortype)
      * [`fn withState(state)`](#fn-specforprovideracceleratorswithstate)
    * [`obj spec.forProvider.cryptoKeyConfig`](#obj-specforprovidercryptokeyconfig)
      * [`fn withKeyReference(keyReference)`](#fn-specforprovidercryptokeyconfigwithkeyreference)
      * [`obj spec.forProvider.cryptoKeyConfig.keyReferenceRef`](#obj-specforprovidercryptokeyconfigkeyreferenceref)
        * [`fn withName(name)`](#fn-specforprovidercryptokeyconfigkeyreferencerefwithname)
        * [`obj spec.forProvider.cryptoKeyConfig.keyReferenceRef.policy`](#obj-specforprovidercryptokeyconfigkeyreferencerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidercryptokeyconfigkeyreferencerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidercryptokeyconfigkeyreferencerefpolicywithresolve)
      * [`obj spec.forProvider.cryptoKeyConfig.keyReferenceSelector`](#obj-specforprovidercryptokeyconfigkeyreferenceselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidercryptokeyconfigkeyreferenceselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidercryptokeyconfigkeyreferenceselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidercryptokeyconfigkeyreferenceselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.cryptoKeyConfig.keyReferenceSelector.policy`](#obj-specforprovidercryptokeyconfigkeyreferenceselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidercryptokeyconfigkeyreferenceselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidercryptokeyconfigkeyreferenceselectorpolicywithresolve)
    * [`obj spec.forProvider.eventPublishConfig`](#obj-specforprovidereventpublishconfig)
      * [`fn withEnabled(enabled)`](#fn-specforprovidereventpublishconfigwithenabled)
      * [`fn withTopic(topic)`](#fn-specforprovidereventpublishconfigwithtopic)
      * [`obj spec.forProvider.eventPublishConfig.topicRef`](#obj-specforprovidereventpublishconfigtopicref)
        * [`fn withName(name)`](#fn-specforprovidereventpublishconfigtopicrefwithname)
        * [`obj spec.forProvider.eventPublishConfig.topicRef.policy`](#obj-specforprovidereventpublishconfigtopicrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidereventpublishconfigtopicrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidereventpublishconfigtopicrefpolicywithresolve)
      * [`obj spec.forProvider.eventPublishConfig.topicSelector`](#obj-specforprovidereventpublishconfigtopicselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidereventpublishconfigtopicselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidereventpublishconfigtopicselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidereventpublishconfigtopicselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.eventPublishConfig.topicSelector.policy`](#obj-specforprovidereventpublishconfigtopicselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidereventpublishconfigtopicselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidereventpublishconfigtopicselectorpolicywithresolve)
    * [`obj spec.forProvider.networkConfig`](#obj-specforprovidernetworkconfig)
      * [`fn withConnectionType(connectionType)`](#fn-specforprovidernetworkconfigwithconnectiontype)
      * [`fn withIpAllocation(ipAllocation)`](#fn-specforprovidernetworkconfigwithipallocation)
      * [`fn withNetwork(network)`](#fn-specforprovidernetworkconfigwithnetwork)
      * [`fn withPrivateServiceConnectConfig(privateServiceConnectConfig)`](#fn-specforprovidernetworkconfigwithprivateserviceconnectconfig)
      * [`fn withPrivateServiceConnectConfigMixin(privateServiceConnectConfig)`](#fn-specforprovidernetworkconfigwithprivateserviceconnectconfigmixin)
      * [`obj spec.forProvider.networkConfig.privateServiceConnectConfig`](#obj-specforprovidernetworkconfigprivateserviceconnectconfig)
        * [`fn withNetworkAttachment(networkAttachment)`](#fn-specforprovidernetworkconfigprivateserviceconnectconfigwithnetworkattachment)
        * [`fn withUnreachableCidrBlock(unreachableCidrBlock)`](#fn-specforprovidernetworkconfigprivateserviceconnectconfigwithunreachablecidrblock)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAccelerators(accelerators)`](#fn-specinitproviderwithaccelerators)
    * [`fn withAcceleratorsMixin(accelerators)`](#fn-specinitproviderwithacceleratorsmixin)
    * [`fn withCryptoKeyConfig(cryptoKeyConfig)`](#fn-specinitproviderwithcryptokeyconfig)
    * [`fn withCryptoKeyConfigMixin(cryptoKeyConfig)`](#fn-specinitproviderwithcryptokeyconfigmixin)
    * [`fn withDataprocServiceAccount(dataprocServiceAccount)`](#fn-specinitproviderwithdataprocserviceaccount)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDisplayName(displayName)`](#fn-specinitproviderwithdisplayname)
    * [`fn withEnableRbac(enableRbac)`](#fn-specinitproviderwithenablerbac)
    * [`fn withEnableStackdriverLogging(enableStackdriverLogging)`](#fn-specinitproviderwithenablestackdriverlogging)
    * [`fn withEnableStackdriverMonitoring(enableStackdriverMonitoring)`](#fn-specinitproviderwithenablestackdrivermonitoring)
    * [`fn withEventPublishConfig(eventPublishConfig)`](#fn-specinitproviderwitheventpublishconfig)
    * [`fn withEventPublishConfigMixin(eventPublishConfig)`](#fn-specinitproviderwitheventpublishconfigmixin)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withNetworkConfig(networkConfig)`](#fn-specinitproviderwithnetworkconfig)
    * [`fn withNetworkConfigMixin(networkConfig)`](#fn-specinitproviderwithnetworkconfigmixin)
    * [`fn withOptions(options)`](#fn-specinitproviderwithoptions)
    * [`fn withOptionsMixin(options)`](#fn-specinitproviderwithoptionsmixin)
    * [`fn withPrivateInstance(privateInstance)`](#fn-specinitproviderwithprivateinstance)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withType(type)`](#fn-specinitproviderwithtype)
    * [`fn withVersion(version)`](#fn-specinitproviderwithversion)
    * [`fn withZone(zone)`](#fn-specinitproviderwithzone)
    * [`obj spec.initProvider.accelerators`](#obj-specinitprovideraccelerators)
      * [`fn withAcceleratorType(acceleratorType)`](#fn-specinitprovideracceleratorswithacceleratortype)
      * [`fn withState(state)`](#fn-specinitprovideracceleratorswithstate)
    * [`obj spec.initProvider.cryptoKeyConfig`](#obj-specinitprovidercryptokeyconfig)
      * [`fn withKeyReference(keyReference)`](#fn-specinitprovidercryptokeyconfigwithkeyreference)
      * [`obj spec.initProvider.cryptoKeyConfig.keyReferenceRef`](#obj-specinitprovidercryptokeyconfigkeyreferenceref)
        * [`fn withName(name)`](#fn-specinitprovidercryptokeyconfigkeyreferencerefwithname)
        * [`obj spec.initProvider.cryptoKeyConfig.keyReferenceRef.policy`](#obj-specinitprovidercryptokeyconfigkeyreferencerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidercryptokeyconfigkeyreferencerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidercryptokeyconfigkeyreferencerefpolicywithresolve)
      * [`obj spec.initProvider.cryptoKeyConfig.keyReferenceSelector`](#obj-specinitprovidercryptokeyconfigkeyreferenceselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidercryptokeyconfigkeyreferenceselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidercryptokeyconfigkeyreferenceselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidercryptokeyconfigkeyreferenceselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.cryptoKeyConfig.keyReferenceSelector.policy`](#obj-specinitprovidercryptokeyconfigkeyreferenceselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidercryptokeyconfigkeyreferenceselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidercryptokeyconfigkeyreferenceselectorpolicywithresolve)
    * [`obj spec.initProvider.eventPublishConfig`](#obj-specinitprovidereventpublishconfig)
      * [`fn withEnabled(enabled)`](#fn-specinitprovidereventpublishconfigwithenabled)
      * [`fn withTopic(topic)`](#fn-specinitprovidereventpublishconfigwithtopic)
      * [`obj spec.initProvider.eventPublishConfig.topicRef`](#obj-specinitprovidereventpublishconfigtopicref)
        * [`fn withName(name)`](#fn-specinitprovidereventpublishconfigtopicrefwithname)
        * [`obj spec.initProvider.eventPublishConfig.topicRef.policy`](#obj-specinitprovidereventpublishconfigtopicrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidereventpublishconfigtopicrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidereventpublishconfigtopicrefpolicywithresolve)
      * [`obj spec.initProvider.eventPublishConfig.topicSelector`](#obj-specinitprovidereventpublishconfigtopicselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidereventpublishconfigtopicselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidereventpublishconfigtopicselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidereventpublishconfigtopicselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.eventPublishConfig.topicSelector.policy`](#obj-specinitprovidereventpublishconfigtopicselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidereventpublishconfigtopicselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidereventpublishconfigtopicselectorpolicywithresolve)
    * [`obj spec.initProvider.networkConfig`](#obj-specinitprovidernetworkconfig)
      * [`fn withConnectionType(connectionType)`](#fn-specinitprovidernetworkconfigwithconnectiontype)
      * [`fn withIpAllocation(ipAllocation)`](#fn-specinitprovidernetworkconfigwithipallocation)
      * [`fn withNetwork(network)`](#fn-specinitprovidernetworkconfigwithnetwork)
      * [`fn withPrivateServiceConnectConfig(privateServiceConnectConfig)`](#fn-specinitprovidernetworkconfigwithprivateserviceconnectconfig)
      * [`fn withPrivateServiceConnectConfigMixin(privateServiceConnectConfig)`](#fn-specinitprovidernetworkconfigwithprivateserviceconnectconfigmixin)
      * [`obj spec.initProvider.networkConfig.privateServiceConnectConfig`](#obj-specinitprovidernetworkconfigprivateserviceconnectconfig)
        * [`fn withNetworkAttachment(networkAttachment)`](#fn-specinitprovidernetworkconfigprivateserviceconnectconfigwithnetworkattachment)
        * [`fn withUnreachableCidrBlock(unreachableCidrBlock)`](#fn-specinitprovidernetworkconfigprivateserviceconnectconfigwithunreachablecidrblock)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Instance

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"InstanceSpec defines the desired state of Instance"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAccelerators

```ts
withAccelerators(accelerators)
```

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

### fn spec.forProvider.withAcceleratorsMixin

```ts
withAcceleratorsMixin(accelerators)
```

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withCryptoKeyConfig

```ts
withCryptoKeyConfig(cryptoKeyConfig)
```

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

### fn spec.forProvider.withCryptoKeyConfigMixin

```ts
withCryptoKeyConfigMixin(cryptoKeyConfig)
```

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withDataprocServiceAccount

```ts
withDataprocServiceAccount(dataprocServiceAccount)
```

"User-managed service account to set on Dataproc when Cloud Data Fusion creates Dataproc to run data processing pipelines."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"An optional description of the instance."

### fn spec.forProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"Display name for an instance."

### fn spec.forProvider.withEnableRbac

```ts
withEnableRbac(enableRbac)
```

"Option to enable granular role-based access control."

### fn spec.forProvider.withEnableStackdriverLogging

```ts
withEnableStackdriverLogging(enableStackdriverLogging)
```

"Option to enable Stackdriver Logging."

### fn spec.forProvider.withEnableStackdriverMonitoring

```ts
withEnableStackdriverMonitoring(enableStackdriverMonitoring)
```

"Option to enable Stackdriver Monitoring."

### fn spec.forProvider.withEventPublishConfig

```ts
withEventPublishConfig(eventPublishConfig)
```

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

### fn spec.forProvider.withEventPublishConfigMixin

```ts
withEventPublishConfigMixin(eventPublishConfig)
```

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"The resource labels for instance to use to annotate any related underlying resources,\nsuch as Compute Engine VMs."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"The resource labels for instance to use to annotate any related underlying resources,\nsuch as Compute Engine VMs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withNetworkConfig

```ts
withNetworkConfig(networkConfig)
```

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

### fn spec.forProvider.withNetworkConfigMixin

```ts
withNetworkConfigMixin(networkConfig)
```

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withOptions

```ts
withOptions(options)
```

"Map of additional options used to configure the behavior of Data Fusion instance."

### fn spec.forProvider.withOptionsMixin

```ts
withOptionsMixin(options)
```

"Map of additional options used to configure the behavior of Data Fusion instance."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withPrivateInstance

```ts
withPrivateInstance(privateInstance)
```

"Specifies whether the Data Fusion instance should be private. If set to\ntrue, all Data Fusion nodes will have private IP addresses and will not be\nable to access the public internet."

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"The region of the Data Fusion instance."

### fn spec.forProvider.withType

```ts
withType(type)
```

"Represents the type of Data Fusion instance. Each type is configured with\nthe default settings for processing and memory."

### fn spec.forProvider.withVersion

```ts
withVersion(version)
```

"Current version of the Data Fusion."

### fn spec.forProvider.withZone

```ts
withZone(zone)
```

"Name of the zone in which the Data Fusion instance will be created. Only DEVELOPER instances use this field."

## obj spec.forProvider.accelerators

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

### fn spec.forProvider.accelerators.withAcceleratorType

```ts
withAcceleratorType(acceleratorType)
```

"The type of an accelator for a CDF instance.\nPossible values are: CDC, HEALTHCARE, CCAI_INSIGHTS."

### fn spec.forProvider.accelerators.withState

```ts
withState(state)
```

"The type of an accelator for a CDF instance.\nPossible values are: ENABLED, DISABLED."

## obj spec.forProvider.cryptoKeyConfig

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

### fn spec.forProvider.cryptoKeyConfig.withKeyReference

```ts
withKeyReference(keyReference)
```

"The name of the key which is used to encrypt/decrypt customer data. For key in Cloud KMS, the key should be in the format of projects//locations//keyRings//cryptoKeys/."

## obj spec.forProvider.cryptoKeyConfig.keyReferenceRef

"Reference to a CryptoKey in kms to populate keyReference."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.cryptoKeyConfig.keyReferenceRef.policy

"Policies for referencing."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.cryptoKeyConfig.keyReferenceSelector

"Selector for a CryptoKey in kms to populate keyReference."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.cryptoKeyConfig.keyReferenceSelector.policy

"Policies for selection."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.cryptoKeyConfig.keyReferenceSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.eventPublishConfig

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

### fn spec.forProvider.eventPublishConfig.withEnabled

```ts
withEnabled(enabled)
```

"Option to enable Event Publishing."

### fn spec.forProvider.eventPublishConfig.withTopic

```ts
withTopic(topic)
```

"The resource name of the Pub/Sub topic. Format: projects/{projectId}/topics/{topic_id}"

## obj spec.forProvider.eventPublishConfig.topicRef

"Reference to a Topic in pubsub to populate topic."

### fn spec.forProvider.eventPublishConfig.topicRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.eventPublishConfig.topicRef.policy

"Policies for referencing."

### fn spec.forProvider.eventPublishConfig.topicRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.eventPublishConfig.topicRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.eventPublishConfig.topicSelector

"Selector for a Topic in pubsub to populate topic."

### fn spec.forProvider.eventPublishConfig.topicSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.eventPublishConfig.topicSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.eventPublishConfig.topicSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.eventPublishConfig.topicSelector.policy

"Policies for selection."

### fn spec.forProvider.eventPublishConfig.topicSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.eventPublishConfig.topicSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.networkConfig

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

### fn spec.forProvider.networkConfig.withConnectionType

```ts
withConnectionType(connectionType)
```

"Optional. Type of connection for establishing private IP connectivity between the Data Fusion customer project VPC and\nthe corresponding tenant project from a predefined list of available connection modes.\nIf this field is unspecified for a private instance, VPC peering is used.\nPossible values are: VPC_PEERING, PRIVATE_SERVICE_CONNECT_INTERFACES."

### fn spec.forProvider.networkConfig.withIpAllocation

```ts
withIpAllocation(ipAllocation)
```

"The IP range in CIDR notation to use for the managed Data Fusion instance\nnodes. This range must not overlap with any other ranges used in the Data Fusion instance network."

### fn spec.forProvider.networkConfig.withNetwork

```ts
withNetwork(network)
```

"Name of the network in the project with which the tenant project\nwill be peered for executing pipelines. In case of shared VPC where the network resides in another host\nproject the network should specified in the form of projects/{host-project-id}/global/networks/{network}"

### fn spec.forProvider.networkConfig.withPrivateServiceConnectConfig

```ts
withPrivateServiceConnectConfig(privateServiceConnectConfig)
```

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

### fn spec.forProvider.networkConfig.withPrivateServiceConnectConfigMixin

```ts
withPrivateServiceConnectConfigMixin(privateServiceConnectConfig)
```

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.networkConfig.privateServiceConnectConfig

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

### fn spec.forProvider.networkConfig.privateServiceConnectConfig.withNetworkAttachment

```ts
withNetworkAttachment(networkAttachment)
```

"Optional. The reference to the network attachment used to establish private connectivity.\nIt will be of the form projects/{project-id}/regions/{region}/networkAttachments/{network-attachment-id}.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES."

### fn spec.forProvider.networkConfig.privateServiceConnectConfig.withUnreachableCidrBlock

```ts
withUnreachableCidrBlock(unreachableCidrBlock)
```

"Optional. Input only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.\nThe size of this block should be at least /25. This range should not overlap with the primary address range of any subnetwork used by the network attachment.\nThis range can be used for other purposes in the consumer VPC as long as there is no requirement for CDF to reach destinations using these addresses.\nIf this value is not provided, the server chooses a non RFC 1918 address range. The format of this field is governed by RFC 4632."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAccelerators

```ts
withAccelerators(accelerators)
```

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

### fn spec.initProvider.withAcceleratorsMixin

```ts
withAcceleratorsMixin(accelerators)
```

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withCryptoKeyConfig

```ts
withCryptoKeyConfig(cryptoKeyConfig)
```

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

### fn spec.initProvider.withCryptoKeyConfigMixin

```ts
withCryptoKeyConfigMixin(cryptoKeyConfig)
```

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withDataprocServiceAccount

```ts
withDataprocServiceAccount(dataprocServiceAccount)
```

"User-managed service account to set on Dataproc when Cloud Data Fusion creates Dataproc to run data processing pipelines."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"An optional description of the instance."

### fn spec.initProvider.withDisplayName

```ts
withDisplayName(displayName)
```

"Display name for an instance."

### fn spec.initProvider.withEnableRbac

```ts
withEnableRbac(enableRbac)
```

"Option to enable granular role-based access control."

### fn spec.initProvider.withEnableStackdriverLogging

```ts
withEnableStackdriverLogging(enableStackdriverLogging)
```

"Option to enable Stackdriver Logging."

### fn spec.initProvider.withEnableStackdriverMonitoring

```ts
withEnableStackdriverMonitoring(enableStackdriverMonitoring)
```

"Option to enable Stackdriver Monitoring."

### fn spec.initProvider.withEventPublishConfig

```ts
withEventPublishConfig(eventPublishConfig)
```

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

### fn spec.initProvider.withEventPublishConfigMixin

```ts
withEventPublishConfigMixin(eventPublishConfig)
```

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"The resource labels for instance to use to annotate any related underlying resources,\nsuch as Compute Engine VMs."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"The resource labels for instance to use to annotate any related underlying resources,\nsuch as Compute Engine VMs."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withNetworkConfig

```ts
withNetworkConfig(networkConfig)
```

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

### fn spec.initProvider.withNetworkConfigMixin

```ts
withNetworkConfigMixin(networkConfig)
```

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withOptions

```ts
withOptions(options)
```

"Map of additional options used to configure the behavior of Data Fusion instance."

### fn spec.initProvider.withOptionsMixin

```ts
withOptionsMixin(options)
```

"Map of additional options used to configure the behavior of Data Fusion instance."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withPrivateInstance

```ts
withPrivateInstance(privateInstance)
```

"Specifies whether the Data Fusion instance should be private. If set to\ntrue, all Data Fusion nodes will have private IP addresses and will not be\nable to access the public internet."

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.initProvider.withType

```ts
withType(type)
```

"Represents the type of Data Fusion instance. Each type is configured with\nthe default settings for processing and memory."

### fn spec.initProvider.withVersion

```ts
withVersion(version)
```

"Current version of the Data Fusion."

### fn spec.initProvider.withZone

```ts
withZone(zone)
```

"Name of the zone in which the Data Fusion instance will be created. Only DEVELOPER instances use this field."

## obj spec.initProvider.accelerators

"List of accelerators enabled for this CDF instance.\nIf accelerators are enabled it is possible a permadiff will be created with the Options field.\nUsers will need to either manually update their state file to include these diffed options, or include the field in a lifecycle ignore changes block.\nStructure is documented below."

### fn spec.initProvider.accelerators.withAcceleratorType

```ts
withAcceleratorType(acceleratorType)
```

"The type of an accelator for a CDF instance.\nPossible values are: CDC, HEALTHCARE, CCAI_INSIGHTS."

### fn spec.initProvider.accelerators.withState

```ts
withState(state)
```

"The type of an accelator for a CDF instance.\nPossible values are: ENABLED, DISABLED."

## obj spec.initProvider.cryptoKeyConfig

"The crypto key configuration. This field is used by the Customer-Managed Encryption Keys (CMEK) feature.\nStructure is documented below."

### fn spec.initProvider.cryptoKeyConfig.withKeyReference

```ts
withKeyReference(keyReference)
```

"The name of the key which is used to encrypt/decrypt customer data. For key in Cloud KMS, the key should be in the format of projects//locations//keyRings//cryptoKeys/."

## obj spec.initProvider.cryptoKeyConfig.keyReferenceRef

"Reference to a CryptoKey in kms to populate keyReference."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.cryptoKeyConfig.keyReferenceRef.policy

"Policies for referencing."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.cryptoKeyConfig.keyReferenceSelector

"Selector for a CryptoKey in kms to populate keyReference."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.cryptoKeyConfig.keyReferenceSelector.policy

"Policies for selection."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.cryptoKeyConfig.keyReferenceSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.eventPublishConfig

"Option to enable and pass metadata for event publishing.\nStructure is documented below."

### fn spec.initProvider.eventPublishConfig.withEnabled

```ts
withEnabled(enabled)
```

"Option to enable Event Publishing."

### fn spec.initProvider.eventPublishConfig.withTopic

```ts
withTopic(topic)
```

"The resource name of the Pub/Sub topic. Format: projects/{projectId}/topics/{topic_id}"

## obj spec.initProvider.eventPublishConfig.topicRef

"Reference to a Topic in pubsub to populate topic."

### fn spec.initProvider.eventPublishConfig.topicRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.eventPublishConfig.topicRef.policy

"Policies for referencing."

### fn spec.initProvider.eventPublishConfig.topicRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.eventPublishConfig.topicRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.eventPublishConfig.topicSelector

"Selector for a Topic in pubsub to populate topic."

### fn spec.initProvider.eventPublishConfig.topicSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.eventPublishConfig.topicSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.eventPublishConfig.topicSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.eventPublishConfig.topicSelector.policy

"Policies for selection."

### fn spec.initProvider.eventPublishConfig.topicSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.eventPublishConfig.topicSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.networkConfig

"Network configuration options. These are required when a private Data Fusion instance is to be created.\nStructure is documented below."

### fn spec.initProvider.networkConfig.withConnectionType

```ts
withConnectionType(connectionType)
```

"Optional. Type of connection for establishing private IP connectivity between the Data Fusion customer project VPC and\nthe corresponding tenant project from a predefined list of available connection modes.\nIf this field is unspecified for a private instance, VPC peering is used.\nPossible values are: VPC_PEERING, PRIVATE_SERVICE_CONNECT_INTERFACES."

### fn spec.initProvider.networkConfig.withIpAllocation

```ts
withIpAllocation(ipAllocation)
```

"The IP range in CIDR notation to use for the managed Data Fusion instance\nnodes. This range must not overlap with any other ranges used in the Data Fusion instance network."

### fn spec.initProvider.networkConfig.withNetwork

```ts
withNetwork(network)
```

"Name of the network in the project with which the tenant project\nwill be peered for executing pipelines. In case of shared VPC where the network resides in another host\nproject the network should specified in the form of projects/{host-project-id}/global/networks/{network}"

### fn spec.initProvider.networkConfig.withPrivateServiceConnectConfig

```ts
withPrivateServiceConnectConfig(privateServiceConnectConfig)
```

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

### fn spec.initProvider.networkConfig.withPrivateServiceConnectConfigMixin

```ts
withPrivateServiceConnectConfigMixin(privateServiceConnectConfig)
```

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.networkConfig.privateServiceConnectConfig

"Optional. Configuration for Private Service Connect.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.\nStructure is documented below."

### fn spec.initProvider.networkConfig.privateServiceConnectConfig.withNetworkAttachment

```ts
withNetworkAttachment(networkAttachment)
```

"Optional. The reference to the network attachment used to establish private connectivity.\nIt will be of the form projects/{project-id}/regions/{region}/networkAttachments/{network-attachment-id}.\nThis is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES."

### fn spec.initProvider.networkConfig.privateServiceConnectConfig.withUnreachableCidrBlock

```ts
withUnreachableCidrBlock(unreachableCidrBlock)
```

"Optional. Input only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.\nThe size of this block should be at least /25. This range should not overlap with the primary address range of any subnetwork used by the network attachment.\nThis range can be used for other purposes in the consumer VPC as long as there is no requirement for CDF to reach destinations using these addresses.\nIf this value is not provided, the server chooses a non RFC 1918 address range. The format of this field is governed by RFC 4632."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."